# sauvc_ws

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/auv_core/lib/auv_core/: bluerov_teleop  control_node  depth_processor_node  gate_detector_node  gate_navigator_node  mission_planner_node  optical_flow_node  perception_node  serial_bridge_node  sim_thruster_mapper  simple_thruster_mapper
install/auv_core/share/auv_core/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/auv_core/share/auv_core/config/: bridge_config.yaml  config_stereo.yaml  ekf.yaml  gz_bridge.yaml
install/auv_core/share/auv_core/launch/: auv_launch.py  simulation_launch.py
install/auv_core/share/auv_core/meshes/: t200-ccw-prop.dae  t200-cw-prop.dae
install/auv_core/share/auv_core/rviz/: slam.rviz  urdf_config.rviz
install/auv_core/share/auv_core/urdf/: orca4_description.urdf
install/auv_core/share/auv_core/worlds/: sauvc_pool.sdf
log/: latest_build
src/auv_core/: setup.cfg  setup.py
src/auv_core/auv_core/: BT.py  Flare_Detection.py  bluerov_teleop_ign.py  control_node.py  depth_processor_node.py  diagnostic_node.py  emergency_test.py  gate_detector_node.py  gate_navigator_node.py  mission_planner_node.py  mission_state_manager.py  optical_flow_node.py  perception_node.py  safety_monitor_node.py  serial_bridge_node.py  simple_thruster_mapper.py
src/auv_core/config/: ekf.yaml  flare_params.yaml  gate_params.yaml  gz_bridge.yaml  mission_params.yaml  navigation_params.yaml  safety_params.yaml  thruster_params.yaml
src/auv_core/launch/: simulation_launch.py
src/auv_core/models/TurtlebotArena/meshes/: Gate.dae
src/auv_core/models/gate/: model.sdf
src/auv_core/models/orca4_ign/: model.sdf
src/auv_core/rviz/: slam.rviz
src/auv_core/urdf/: orca4_description.urdf
src/auv_core/worlds/: sauvc_pool.sdf
src/auv_slam/: CMakeLists.txt  package.xml
src/auv_slam/config/: bridge_config.yaml  drum_params.yaml  ekf.yaml  flare_params.yaml  gate_params.yaml  gz_bridge.yaml  thruster_params.yaml
src/auv_slam/launch/: display.launch.py  mission.launch.py  slam.launch.py
src/auv_slam/models/TurtlebotArena/: model.sdf
src/auv_slam/models/orca4_ign/: model.sdf
src/auv_slam/rviz/: urdf_config.rviz
src/auv_slam/scripts/: BT.py  bluerov_teleop_ign.py  depth_processor_node.py  diagnostic_node.py  drum_detector_node.py  drum_navigator_node.py  emergency_test.py  flare_navigator_node.py  gate_detector_node.py  gate_navigator_node.py  mission_state_manager.py  optical_flow_node.py  safety_monitor_node.py  simple_thruster_mapper.py
src/auv_slam/src/: stereo_slam_node.cpp
src/auv_slam/src/description/: orca4_description.urdf
src/auv_slam/worlds/: underwater_world_ign.sdf
